Module/ERROE LOG
错误日志 --ERROR LOG

1:jquery ajax  当dataType 参数忘记写时会出现返回数据却无法调用回调函数success里的对象判断方法.此时控制台不报错


2:使用函数声明 可以在声明代码前调用,但函数表达式创建的函数却不行 只能在创建后调用
如下:
//使用函数表达式 创建函数 只能在创建后调用
alert(sum(12,12));  //sum is not a function(…)(anonymous function) @ VM56:1
var sum=function(num1,num2){
	return num1+num2
}
//使用函数声明 可以在声明代码之前调用
alert(sum(12,12));  //24
function sum(num1,num2){
	return num1+num2
}


3: 在使用gulp的插件 gulp-header是 报以下错误 原因是 加入的 字符串中含有<%  需要使用 <%= start %>转译
F:\planforstudy\glup\node_modules\lodash.template\index.js:356
    throw result;
    ^
SyntaxError: Unexpected token ILLEGAL
    at Function (native)


4:使用slidesjs 制作banner时 又是出现排版错乱 竖排
原因是在一个页面里对banner的dom运行了二次slider函数  此插件不支持
解决方案:刷新页面


5:css 在小屏和正常 大屏不正常 使用  解决实例如商城切换店铺full-view dom的处理方式
不考虑大于640px 的部分
@media only screen and (min-width:640px){
	.full-view{width: 640px !important; margin: 0 auto;}
}


6:当一个调用一个需要参数的函数时  但调用的时候不能不能传参数 可以借助中间函数
function a(b,c){
	b(c)
}


